Changed base path

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Modern Website Design</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/style/main.css">
+    <base href="https://code.jackkimmins.com/liveserver/">
+    <link rel="stylesheet" href="./style/main.min.css">
 </head>
 
 <body>
@@ -46,7 +47,7 @@
         <div class="container img-text-grid">
             <div class="pair">
                 <div class="grid-item image">
-                    <img src="/img/weston.jpg" alt="A picture of Weston-super-Mare">
+                    <img src="./img/weston.jpg" alt="A picture of Weston-super-Mare">
                 </div>
 
                 <div class="grid-item text">
@@ -60,7 +61,7 @@
 
             <div class="pair">
                 <div class="grid-item image">
-                    <img src="/img/weston.jpg" alt="A picture of Weston-super-Mare">
+                    <img src="./img/weston.jpg" alt="A picture of Weston-super-Mare">
                 </div>
 
                 <div class="grid-item text">
@@ -73,7 +74,7 @@
 
             <div class="pair">
                 <div class="grid-item image">
-                    <img src="/img/weston.jpg" alt="A picture of Weston-super-Mare">
+                    <img src="./img/weston.jpg" alt="A picture of Weston-super-Mare">
                 </div>
 
                 <div class="grid-item text">
